--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^10.8.0",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
